# flexisip

./: CMakeLists.txt  configure.ac
cmake/: FindSofiaSipUa.cmake
src/: CMakeLists.txt  authdb-file.cc  authdb-soci.cc  authdb.cc  authdb.hh  expressionparser.cc  expressionparser.hh  forkcontext.cc  forkcontext.hh  module-auth.cc  module-auth.hh  module-custom-authentication.cc  module-custom-authentication.hh  module-datehandler.cc  module-gatewayadapter.cc  module-redirect.cc  module-registrar.cc  module.hh  registrardb-redis-async.cc  registrardb.cc  sipattrextractor.hh
src/auth/: auth-module-wrapper.cc  auth-module-wrapper.hh  auth-module.cc  auth-module.hh  auth-status.hh  flexisip-auth-module.cc  flexisip-auth-module.hh  flexisip-auth-status.hh  http-auth-module.cc  http-auth-module.hh
src/plugin/jwe-auth-plugin/: jwe-auth-plugin.cc
src/presence/: presence-longterm.cc
src/utils/: string-formater.cc
