


set(SOURCE_FILES
	agent.cc
authdb-file.cc
authdb-odbc.cc
authdb.cc
callcontext-mediarelay.cc
callcontext-transcoder.cc
callstore.cc
common.cc
configmanager.cc
contact-masquerader.cc
dos-protection.cc
entryfilter.cc
etchosts.cc
event.cc
expressionparser.cc
flexisip-exception.cc
forkbasiccontext.cc
forkbasiccontext.hh
forkcallcontext.cc
forkcontext.cc
forkmessagecontext.cc
h264iframefilter.cc
lpconfig.cc
main.cc
mediarelay.cc
module-auth.cc
module-contact-route-inserter.cc
module-datehandler.cc
module-forward.cc
module-garbage-in.cc
module-gatewayadapter.cc
module-loadbalancer.cc
module-mediarelay.cc
module-nat-helper.cc
module-presence.cc
module-pushnotification.cc
module-redirect.cc
module-registrar.cc
module-router.cc
module-sanitychecker.cc
module-statistics-collector.cc
module-transcode.cc
module.cc
monitor.cc
proxy-configmanager.cc
recordserializer-c.cc
recordserializer-json.cc
recordserializer-protobuf.cc
registrardb-internal.cc
registrardb-redis-async.cc
registrardb.cc
sdp-modifier.cc
sipattrextractor.cc
snmp-agent.cc
stun.cc
telephone-event-filter.cc
transaction.cc
uac-register.cc
agent.hh
authdb.hh
callcontext-mediarelay.hh
callcontext-transcoder.hh
callstore.hh
common.hh
configmanager.hh
contact-masquerader.hh
dos-protection.hh
entryfilter.hh
etchosts.hh
event.hh
expressionparser.hh
flexisip-exception.hh
forkbasiccontext.hh
forkcallcontext.hh
forkcontext.hh
forkmessagecontext.hh
h264iframefilter.hh
lateforkapplier.hh
mediarelay.hh
module-registrar.hh
module.hh
monitor.hh
recordserializer.hh
registrardb-internal.hh
registrardb-redis.hh
registrardb.hh
sdp-modifier.hh
sipattrextractor.hh
stun.hh
telephone-event-filter.hh
transaction.hh
uac-register.hh
cJSON.c
cJSON.h
	)

add_executable( flexisip ${SOURCE_FILES})
